편의점 프로젝트 3 - View 만들어야됨

--- a/cvs1/build.gradle
+++ b/cvs1/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	//테스트 환경에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+	//validation 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
